Change naming from "projects" to "lists"

--- a/src/template.html
+++ b/src/template.html
@@ -11,8 +11,10 @@
     </header>
     <div id="main-wrapper">
         <div id="sidebar">
-            <h2>My Projects</h2>
-            <div id="projects-list"></div>
+            <div id="lists-list-container">
+                <h2>My Lists</h2>
+                <div id="lists-list"></div>
+            </div>
         </div>
         <div id="todo-display"></div>
     </div>
