Change file structure

--- a/src/template.html
+++ b/src/template.html
@@ -11,6 +11,7 @@
     </header>
     <div id="main-wrapper">
         <div id="sidebar">
+            <button id="add-list">Add list</button>
             <div id="lists-list-container">
                 <h2>My Lists</h2>
                 <div id="lists-list"></div>
@@ -18,5 +19,6 @@
         </div>
         <div id="todo-display"></div>
     </div>
+    <dialog id="create"></dialog>
 </body>
 </html>
