--- a/src/template.html
+++ b/src/template.html
@@ -6,18 +6,20 @@
     <title>Todo Poyo</title>
 </head>
 <body>
-    <header>
-        <h1>Todo Poyo</h1>
-    </header>
     <div id="main-wrapper">
-        <div id="sidebar">
-            <button id="add-list">Add list</button>
-            <div id="lists-list-container">
-                <h2>My Lists</h2>
-                <div id="lists-list"></div>
+        <header>
+            <h1>TODO POYO</h1>
+        </header>
+        <div id="inner-wrapper">
+            <div id="sidebar">
+                <button id="add-list">Add list</button>
+                <div id="lists-list-container">
+                    <h2>My Lists</h2>
+                    <div id="lists-list"></div>
+                </div>
             </div>
+            <div id="todo-display"></div>
         </div>
-        <div id="todo-display"></div>
     </div>
     <dialog id="create"></dialog>
 </body>
