Revamp sidebar styling im so proud of myself (not really)

--- a/src/template.html
+++ b/src/template.html
@@ -7,14 +7,13 @@
 </head>
 <body>
     <div id="main-wrapper">
-        <header>
-            <h1>TODO POYO</h1>
-        </header>
         <div id="inner-wrapper">
             <div id="sidebar">
-                <button id="add-list">Add list</button>
                 <div id="lists-list-container">
                     <h2>My Lists</h2>
+                    <div id="add-btn-container">
+                        <button id="add-list">Add list</button>
+                    </div>
                     <div id="lists-list"></div>
                 </div>
             </div>
